--- a/package.json
+++ b/package.json
@@ -25,29 +25,29 @@
   "private": true,
   "dependencies": {
     "@angular-mdc/web": "^0.44.0",
-    "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
+    "@angular/animations": "^7.2.14",
+    "@angular/common": "^7.2.14",
+    "@angular/compiler": "^7.2.14",
+    "@angular/core": "^7.2.14",
+    "@angular/forms": "^7.2.14",
+    "@angular/platform-browser": "^7.2.14",
+    "@angular/platform-browser-dynamic": "^7.2.14",
+    "@angular/router": "^7.2.14",
     "core-js": "^2.5.4",
-    "ethers": "^4.0.20",
+    "ethers": "^4.0.27",
     "rxjs": "~6.3.3",
-    "truffle-contract": "^4.0.1",
+    "truffle-contract": "^4.0.14",
     "tslib": "^1.9.0",
-    "web3": "1.0.0-beta.37",
+    "web3": "^1.0.0-beta.54",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^7.4.1",
+    "@angular-builders/custom-webpack": "^7.4.3",
     "@angular-builders/dev-server": "^7.3.1",
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.3",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
+    "@angular-devkit/build-angular": "^0.13.8",
+    "@angular/cli": "^7.3.8",
+    "@angular/compiler-cli": "^7.2.14",
+    "@angular/language-service": "^7.2.14",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -59,7 +59,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
