--- a/package.json
+++ b/package.json
@@ -35,16 +35,16 @@
     "@angular/router": "^7.2.14",
     "core-js": "^2.5.4",
     "ethers": "^4.0.20",
-    "truffle-contract": "^4.0.1",
-    "web3": "1.0.0-beta.37",
     "rxjs": "~6.3.3",
+    "truffle-contract": "^4.0.1",
     "tslib": "^1.9.0",
+    "web3": "^1.0.0-beta.54",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^7.4.3",
     "@angular-builders/dev-server": "^7.3.1",
-    "@angular-devkit/build-angular": "^0.13.8",
+    "@angular-devkit/build-angular": "^0.13.9",
     "@angular/cli": "^7.3.8",
     "@angular/compiler-cli": "^7.2.14",
     "@angular/language-service": "^7.2.14",
