--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
     "@angular/platform-browser": "^7.2.14",
     "@angular/platform-browser-dynamic": "^7.2.14",
     "@angular/router": "^7.2.14",
+    "dotenv": "^6.2.0",
     "core-js": "^2.5.4",
     "ethers": "^4.0.20",
     "rxjs": "~6.3.3",
     "truffle-contract": "^4.0.16",
+    "ts-md5": "^1.2.4",
+    "truffle-hdwallet-provider": "^1.0.10",
     "tslib": "^1.9.0",
     "web3": "^1.0.0-beta.55",
     "zone.js": "~0.8.26"
