--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,7 +24,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-mdc/web": "^0.44.0",
+    "@angular-mdc/web": "^1.0.5",
     "@angular/animations": "^7.2.14",
     "@angular/common": "^7.2.14",
     "@angular/compiler": "^7.2.14",
@@ -33,13 +33,14 @@
     "@angular/platform-browser": "^7.2.14",
     "@angular/platform-browser-dynamic": "^7.2.14",
     "@angular/router": "^7.2.14",
-    "dotenv": "^6.2.0",
     "core-js": "^2.5.4",
+    "dotenv": "^6.2.0",
     "ethers": "^4.0.20",
+    "material-components-web": "^2.3.0",
     "rxjs": "~6.3.3",
     "truffle-contract": "^4.0.16",
-    "ts-md5": "^1.2.4",
     "truffle-hdwallet-provider": "^1.0.10",
+    "ts-md5": "^1.2.4",
     "tslib": "^1.9.0",
     "web3": "^1.0.0-beta.55",
     "zone.js": "~0.8.26"
