--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -43,7 +43,7 @@
     "truffle-hdwallet-provider": "^1.0.10",
     "ts-md5": "^1.2.4",
     "tslib": "^1.9.0",
-    "web3": "^1.0.0-beta.55",
+    "web3": "^1.2.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
