--- a/Blockchain/package.json
+++ b/Blockchain/package.json
@@ -1,6 +1,6 @@
 {
   "name": "contracts",
-  "version": "1.0.1",
+  "version": "1.1.1",
   "description": "Truflle eth dependencies",
   "main": "truffle-config.js",
   "author": {
@@ -17,7 +17,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^6.2.0",
-    "truffle-hdwallet-provider": "^1.0.10"
+    "@truffle/hdwallet-provider": "^1.2.1",
+    "dotenv": "^8.2.0"
   }
 }
