--- a/Blockchain/package.json
+++ b/Blockchain/package.json
@@ -1,11 +1,10 @@
 {
   "name": "contracts",
   "version": "1.1.1",
-  "description": "Truflle eth dependencies",
+  "description": "Truffle eth dependencies",
   "main": "truffle-config.js",
   "author": {
-    "name": "@ng-es",
-    "url": "https://medium.com/ngesyfirebase"
+    "name": "@crisgarner"
   },
   "contributors": [
     {
