--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
     "@walletconnect/web3-provider": "^1.3.5",
+    "3box": "^1.19.1",
     "rxjs": "~6.6.0",
     "truffle-contract": "^4.0.31",
     "ts-md5": "^1.2.7",
