--- a/Blockchain/package.json
+++ b/Blockchain/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "@truffle/hdwallet-provider": "^1.5.0",
+    "@openzeppelin/contracts": "^4.8.3",
     "dotenv": "^10.0.0",
     "truffle-hdwallet-provider": "^1.0.6"
   }
