--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "eslint . --ext .ts",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot --target=production"
   },
   "private": true,
   "dependencies": {
@@ -30,7 +31,10 @@
     "ts-md5": "^1.2.7",
     "tslib": "^2.0.0",
     "web3modal": "^1.9.3",
-    "zone.js": "~0.11.3"
+    "zone.js": "~0.11.3",
+    "@angular/cli": "~11.2.1",
+    "@angular/compiler-cli": "~11.2.1",
+    "typescript": "~4.1.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.1",
@@ -50,5 +54,9 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "typescript": "~4.1.2"
+  },
+  "engines":{
+    "node": "16.20.0",
+    "npm": "9.6.6"
   }
 }
