--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -34,7 +34,8 @@
     "zone.js": "~0.11.3",
     "@angular/cli": "~11.2.1",
     "@angular/compiler-cli": "~11.2.1",
-    "typescript": "~4.1.2"
+    "typescript": "~4.1.2",
+    "keccak": "3.0.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.1",
